--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <div class="bg-gray-200 row-span-3 rounded-2xl">
                 <video
                   class="rounded-2xl h-[95%] w-[96%] object-cover -rotate-3"
-                  src="./assets/webz-video.mp4"
+                  src="https://video-previews.elements.envatousercontent.com/h264-video-previews/c259d5a8-1599-4db8-8945-3afe7a470777/55294911.mp4"
                   autoplay
                   muted
                   loop
@@ -1369,3 +1369,4 @@
     <!-- ======================= footer Section End ========================== -->
   </body>
 </html>
+
